Fix unit test for client. Fix selection of first item in a task menu ( point 8 here: https://docs.google.com/document/d/1HrxG5w8BsVaZuLlSauxinyb3Vfm9-SV9F41ck74YrPA/edit# )

--- a/dashboard-js/client/app/tasks/tasks.html
+++ b/dashboard-js/client/app/tasks/tasks.html
@@ -3,9 +3,15 @@
 <div class="container">
 	<div class="row">
 		<div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
-      <ul class="nav nav-tabs nav-stacked col-md-4_ col-lg-4_ col-sm-6_" ng-repeat="task in tasks">
-        <li><a href="#" tooltip="{{task.description}}" ng-click="selectTask(task)" ng-class="{active: isTaskSelected(task)}">{{ task.name }}</a></li>
-      </ul>
+          <ul class="nav nav-tabs nav-stacked col-md-4_ col-lg-4_ col-sm-6_" ng-repeat="task in tasks">
+            <li>
+                <a tooltip="{{task.description}}"
+                   ng-click="selectTask(task)"
+                   class="task-menu-item"
+                   ng-class="{active: isTaskSelected(task)}">{{ task.name }}
+                </a>
+            </li>
+          </ul>
 		</div>
 
     <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
