--- a/portal-php/public_html/design/src/html/catalog/services.html
+++ b/portal-php/public_html/design/src/html/catalog/services.html
@@ -7,7 +7,7 @@
 				<ul class="list-unstyled">
 					<li ng-repeat="service in subcategory.services" ng-switch on="service.serviceType.id">
 						<div ng-switch-when="1"><a ng-href="{{service.serviceType.url}}">{{service.name}}</a></div>
-						<div ng-switch-when="4"><a ui-sref="service({'id': service.id })">{{service.name}}</a></div>
+						<div ng-switch-when="4"><a ui-sref="service.general({'id': service.id })">{{service.name}}</a></div>
 					</li>
 				</ul>
 				<p><a class="btn btn-default" href="#" role="button">Всі послуги <span class="badge badge-info">42</span></a></p>
