--- a/portal-php/public_html/design/src/html/service/index.html
+++ b/portal-php/public_html/design/src/html/service/index.html
@@ -2,7 +2,7 @@
 	<div class="row">
 		<div class="col-md-12">
 			<ul class="nav nav-tabs">
-				<li ui-sref-active="active" role="presentation"><a ui-sref="service.general">Послуга</a></li>
+				<li ui-sref-active="active" role="presentation"><a ui-sref="service.general({id: service.id})">Послуга</a></li>
 				<li ui-sref-active="active" role="presentation"><a ui-sref="service.instruction">Інструкція</a></li>
 				<li ui-sref-active="active" role="presentation"><a ui-sref="service.legislation">Законодавство</a></li>
 				<li ui-sref-active="active" role="presentation"><a ui-sref="service.questions">Поширенні питання</a></li>
