--- a/dashboard-js/client/app/tasks/tasks.html
+++ b/dashboard-js/client/app/tasks/tasks.html
@@ -58,7 +58,7 @@
       </p>
     </div>
 
-    <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">	
+    <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3" ng-hide="true">
     	<h4>Події</h4>	
 
 			<form class="form-inline" action="" method="post" role="form">
