https://docs.google.com/document/d/1HrxG5w8BsVaZuLlSauxinyb3Vfm9-SV9F41ck74YrPA/edit# 4-5 задача ++

--- a/dashboard-js/client/app/tasks/tasks.html
+++ b/dashboard-js/client/app/tasks/tasks.html
@@ -46,9 +46,9 @@
         </p>
       </div>
       <p>
-        <button ng-hide="taskForm == null" ng-hide="selectedTask.assignee != null" ng-click="assignTask()"class="btn btn-success">Взяти в роботу</button>
+        <button ng-if="taskForm == null" ng-hide="selectedTask.assignee != null" ng-click="assignTask()"class="btn btn-success">Взяти в роботу</button>
         <!-- <button ng-hide="taskForm == null" ng-disabled="selectedTask.assignee != null && hasAttachment()" ng-click="downloadAttachment()" class="btn btn-success">Загрузити документ</button> -->
-        <button ng-hide="taskForm == null" ng-hide="selectedTask.assignee == null" ng-click="submitTask()" class="btn btn-success">Опрацювати</button>
+        <button ng-if="taskForm == null" ng-hide="selectedTask.assignee == null" ng-click="submitTask()" class="btn btn-success">Опрацювати</button>
       </p>
     </div>
 </div>
