https://docs.google.com/document/d/1HrxG5w8BsVaZuLlSauxinyb3Vfm9-SV9F41ck74YrPA/edit# 2 задача

--- a/dashboard-js/client/app/tasks/tasks.html
+++ b/dashboard-js/client/app/tasks/tasks.html
@@ -8,8 +8,9 @@
                 <a tooltip="{{task.description}}"
                    ng-click="selectTask(task)"
                    class="task-menu-item"
-                   ng-class="{active: isTaskSelected(task)}">{{ task.name }}
+                   ng-class="{active: isTaskSelected(task)}">{{ task.processDefinitionId }} {{ task.taskDefinitionKey }} {{ task.createTime }}
                 </a>
+                   <!--ng-class="{active: isTaskSelected(task)}">{{ task.name }} -->
             </li>
           </ul>
 		</div>
