--- a/portal-php/public_html/design/src/html/catalog/services.html
+++ b/portal-php/public_html/design/src/html/catalog/services.html
@@ -5,9 +5,8 @@
 			<div class="col-xs-4" ng-repeat="subcategory in category.subcategories">
 				<h3>{{subcategory.name}}</h3>
 				<ul class="list-unstyled">
-					<li ng-repeat="service in subcategory.services" ng-switch on="service.serviceType.id">
-						<div ng-switch-when="1"><a ui-sref="service.general({'id': service.id })">{{service.name}}</a></div>
-						<div ng-switch-when="4"><a ui-sref="service.general({'id': service.id })">{{service.name}}</a></div>
+					<li ng-repeat="service in subcategory.services">
+						<a ui-sref="service.general({'id': service.id })">{{service.name}}</a>
 					</li>
 				</ul>
 				<p><a class="btn btn-default" href="#" role="button">Всі послуги <span class="badge badge-info">42</span></a></p>
