--- a/dashboard-js/client/app/tasks/tasks.html
+++ b/dashboard-js/client/app/tasks/tasks.html
@@ -28,7 +28,7 @@
 
         <p ng-if="item.type == 'textArea'">
           <label>{{item.name}}</label>
-          <textarea class="form-control" ng-disabled="isFormPropertyDisabled(item)" ng-required="item.required" ng-model="item.value"/>
+          <textarea class="form-control" ng-disabled="isFormPropertyDisabled(item)" ng-required="item.required" ng-model="item.value"></textarea>
         </p>
 
         <p ng-if="item.type == 'user'">
@@ -51,7 +51,7 @@
           Файл: <a href="/api/tasks/{{taskId}}/attachments/{{item.id}}/content" target="_blank"><b>{{item.name}}</b> {{item.description}}</a>
         </p>
       </div>
-      <p> <!--taskForm != null   ng-if="selectedTask != null" -->
+      <p ng-if="selectedTask"> <!--taskForm != null    -->
         <button ng-hide="selectedTask.assignee != null" ng-click="assignTask()"class="btn btn-success">Взяти в роботу</button>
         <!-- <button ng-hide="taskForm == null" ng-disabled="selectedTask.assignee != null && hasAttachment()" ng-click="downloadAttachment()" class="btn btn-success">Загрузити документ</button> -->
         <button ng-hide="selectedTask.assignee == null" ng-click="submitTask()" class="btn btn-success">Опрацювати</button>
