Налаштував html5Mode

--- a/portal-php/public_html/design/src/index.html
+++ b/portal-php/public_html/design/src/index.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>Портал державних послуг</title>
+	<base href="/">
     <!-- build:style bundle -->
 	<!-- /build -->
 </head>
