--- a/portal-php/public_html/design/src/html/service/country/built-in/index.html
+++ b/portal-php/public_html/design/src/html/service/country/built-in/index.html
@@ -2,7 +2,10 @@
 	<div class="list-group-item">
 		<span>Крок 1. Увійдіть в систему через</span>
 		<button class="btn btn-info"><i class="icon-door-lock"></i><span class="btn-text">i.gov.ua</span></button>
-		<button class="btn btn-info"><i class="icon-bank-id"></i><span class="btn-text">BankID</span></button>
+		<a class="btn btn-info" ng-href="https://bankid.privatbank.ua/DataAccessService/das/authorize?response_type=code&client_id=dniprorada&redirect_uri=http://i.gov.ua/service/{{service.id}}/country/built-in">
+			<i class="icon-bank-id"></i>
+			<span class="btn-text">BankID</span>
+		</a>
 		<button class="btn"><i class="icon-mobil-id"></i></button>
 		<button class="btn btn-success i-btn-badge">
 			<i class="icon-badge"></i>
