Добавив авторизацію за допомогою bankid

--- a/portal-php/public_html/design/src/html/service/city/built-in/index.html
+++ b/portal-php/public_html/design/src/html/service/city/built-in/index.html
@@ -22,7 +22,10 @@
 	<div class="list-group-item" ng-if="data.city">
 		<span>Крок 2. Увійдіть в систему через</span>
 		<button class="btn btn-info"><i class="icon-door-lock"></i><span class="btn-text">i.gov.ua</span></button>
-		<button class="btn btn-info"><i class="icon-bank-id"></i><span class="btn-text">BankID</span></button>
+		<a class="btn btn-info" ng-href="https://bankid.privatbank.ua/DataAccessService/das/authorize?response_type=code&client_id=dniprorada&redirect_uri={{$location.protocol()}}://{{$location.host()}}{{$state.href('service.city.built-in.bankid', {'id': service.id, 'region': data.region.id, 'city': data.city.id})}}">
+			<i class="icon-bank-id"></i>
+			<span class="btn-text">BankID</span>
+		</a>
 		<button class="btn"><i class="icon-mobil-id"></i></button>
 		<button class="btn btn-success i-btn-badge">
 			<i class="icon-badge"></i>
