--- a/portal-php/public_html/design/src/html/service/region/built-in/index.html
+++ b/portal-php/public_html/design/src/html/service/region/built-in/index.html
@@ -18,7 +18,10 @@
 	<div class="list-group-item" ng-if="data.region">
 		<span>Крок 2. Увійдіть в систему через</span>
 		<button class="btn btn-info"><i class="icon-door-lock"></i><span class="btn-text">i.gov.ua</span></button>
-		<button class="btn btn-info"><i class="icon-bank-id"></i><span class="btn-text">BankID</span></button>
+		<a class="btn btn-info" ng-href="https://bankid.privatbank.ua/DataAccessService/das/authorize?response_type=code&client_id=dniprorada&redirect_uri={{$location.protocol()}}://{{$location.host()}}{{$state.href('service.region.built-in.bankid', {'id': service.id, 'region': data.region.id})}}">
+			<i class="icon-bank-id"></i>
+			<span class="btn-text">BankID</span>
+		</a>
 		<button class="btn"><i class="icon-mobil-id"></i></button>
 		<button class="btn btn-success i-btn-badge">
 			<i class="icon-badge"></i>
