[#148]: Rememeber selected issue between tabs

--- a/dashboard-js/client/app/tasks/tasks.html
+++ b/dashboard-js/client/app/tasks/tasks.html
@@ -8,7 +8,8 @@
                 <a tooltip="{{task.description}}"
                    ng-click="selectTask(task)"
                    class="task-menu-item"
-                   ng-class="{active: isTaskSelected(task)}">{{ getProcessName(task.processDefinitionId) }} | {{ task.name }} {{ sDateShort(task.createTime) }}
+                   ng-class="{active: isTaskSelected(task)}">
+                    {{ getProcessName(task.processDefinitionId) }} | {{ task.name }} {{ sDateShort(task.createTime) }}
                 </a>
                    <!--ng-class="{active: isTaskSelected(task)}">{{ task.name }} -->
             </li>
@@ -21,14 +22,16 @@
       <show-error data="error" ng-show="error"></show-error>
 
       <div ng-repeat="item in taskForm">
-        <p ng-if="item.type == 'string' || item.type == 'long' || item.type == 'date'">
+        <p ng-if="['string', 'long', 'date'].indexOf(item.type) > -1">
           <label>{{item.name}}</label>
-          <input class="form-control" ng-disabled="isFormPropertyDisabled(item)" ng-required="item.required" ng-model="item.value"/>
+          <input class="form-control" ng-disabled="isFormPropertyDisabled(item)"
+                 ng-required="item.required" ng-model="item.value"/>
         </p>
 
         <p ng-if="item.type == 'textArea'">
           <label>{{item.name}}</label>
-          <textarea class="form-control" ng-disabled="isFormPropertyDisabled(item)" ng-required="item.required" ng-model="item.value"></textarea>
+          <textarea class="form-control" ng-disabled="isFormPropertyDisabled(item)"
+                    ng-required="item.required" ng-model="item.value"></textarea>
         </p>
 
         <p ng-if="item.type == 'user'">
@@ -38,10 +41,12 @@
 
         <p ng-if="item.type == 'enum'">
           <label>{{item.name}}</label>
-          <select class="form-control" ng-model="item.value" ng-options="oEnumValue.id as oEnumValue.name for oEnumValue in item.enumValues" ng-required="item.required" ng-disabled="isFormPropertyDisabled(item)"></select>
+          <select class="form-control" ng-disabled="isFormPropertyDisabled(item)"
+                  ng-options="oEnumValue.id as oEnumValue.name for oEnumValue in item.enumValues"
+                  ng-required="item.required" ng-model="item.value"></select>
         </p>
 
-        <p ng-if="item.type != 'string' && item.type != 'long' && item.type != 'date' && item.type != 'enum' && item.type != 'user' && item.type != 'textArea'">
+        <p ng-if="['string', 'long', 'date', 'enum', 'user', 'textArea'].indexOf(item.type) == -1">
           <label>{{item.name}}</label>
           <input class="form-control" ng-disabled="true" ng-required="item.required" ng-model="item.value" />
         </p>
@@ -52,7 +57,7 @@
         </p>
       </div>
       <p ng-if="selectedTask"> <!--taskForm != null    -->
-        <button ng-hide="selectedTask.assignee != null" ng-click="assignTask()"class="btn btn-success">Взяти в роботу</button>
+        <button ng-hide="selectedTask.assignee != null" ng-click="assignTask()" class="btn btn-success">Взяти в роботу</button>
         <!-- <button ng-hide="taskForm == null" ng-disabled="selectedTask.assignee != null && hasAttachment()" ng-click="downloadAttachment()" class="btn btn-success">Загрузити документ</button> -->
         <button ng-hide="selectedTask.assignee == null" ng-click="submitTask()" class="btn btn-success">Опрацювати</button>
       </p>
