--- a/dashboard-js/client/app/tasks/tasks.html
+++ b/dashboard-js/client/app/tasks/tasks.html
@@ -1,71 +1,66 @@
-<div ng-include="'components/navbar/navbar.html'"></div>
-
+<div ng-include="'components/navbar/navbar.html'" class="navbar-fixed-top"></div>
 <div class="container">
-	<div class="row">
-		<div class="col-xs-4 tasks">
-          <div class="tasks__search">
-            <div class="form-group">
-              <label>Пошук</label>
-              <input type="text" class="form-control" placeholder="Введіть запит.." ng-model="filter.raw"/>
-            </div>
+  <div class="container__in">
+    <div class="row">
+      <div class="col-xs-4 sidebar">
+        <div class="tasks">
+          <div class="list-group">
+            <a class="list-group-item task" href=""
+               ng-repeat="task in tasks"
+               tooltip="{{task.description}}"
+               ng-click="selectTask(task)"
+               ng-class="{'active': isTaskSelected(task)}">
+              {{ getProcessName(task.processDefinitionId) }} | {{ task.name }} {{ sDateShort(task.createTime) }}
+            </a>
           </div>
-          <ul class="tasks__list">
-            <li class="task"  ng-repeat="task in tasks | filter: filter.raw">
-                <a tooltip="{{task.description}}"
-                   ng-click="selectTask(task)"
-                   ng-class="{active: isTaskSelected(task)}">
-                    {{ getProcessName(task.processDefinitionId) }} | {{ task.name }} {{ sDateShort(task.createTime) }}
-                </a>
-                   <!--ng-class="{active: isTaskSelected(task)}">{{ task.name }} -->
-            </li>
-          </ul>
-		</div>
+        </div>
+      </div>
+      <div class="col-xs-8 col-xs-offset-4 main">
+        <h3 ng-show="selectedTask && taskForm == null && !error">Завантаження ...</h3>
 
-    <div class="col-xs-8">
-      <h3 ng-show="selectedTask && taskForm == null && !error">Завантаження ...</h3>
+        <show-error data="error" ng-show="error"></show-error>
 
-      <show-error data="error" ng-show="error"></show-error>
+        <div ng-repeat="item in taskForm">
+          <p ng-if="['string', 'long', 'date'].indexOf(item.type) > -1">
+            <label>{{item.name}}</label>
+            <input class="form-control" ng-disabled="isFormPropertyDisabled(item)"
+                   ng-required="item.required" ng-model="item.value"/>
+          </p>
 
-      <div ng-repeat="item in taskForm">
-        <p ng-if="['string', 'long', 'date'].indexOf(item.type) > -1">
-          <label>{{item.name}}</label>
-          <input class="form-control" ng-disabled="isFormPropertyDisabled(item)"
-                 ng-required="item.required" ng-model="item.value"/>
-        </p>
+          <p ng-if="item.type == 'textArea'">
+            <label>{{item.name}}</label>
+        <textarea class="form-control" ng-disabled="isFormPropertyDisabled(item)"
+                  ng-required="item.required" ng-model="item.value"></textarea>
+          </p>
 
-        <p ng-if="item.type == 'textArea'">
-          <label>{{item.name}}</label>
-          <textarea class="form-control" ng-disabled="isFormPropertyDisabled(item)"
-                    ng-required="item.required" ng-model="item.value"></textarea>
-        </p>
+          <p ng-if="item.type == 'user'">
+            <label>{{item.name}}</label>
+            <input class="form-control" ng-disabled="true" ng-required="item.required" ng-model="item.value"/>
+          </p>
 
-        <p ng-if="item.type == 'user'">
-          <label>{{item.name}}</label>
-          <input class="form-control" ng-disabled="true" ng-required="item.required" ng-model="item.value"/>
-        </p>
+          <p ng-if="item.type == 'enum'">
+            <label>{{item.name}}</label>
+            <select class="form-control" ng-disabled="isFormPropertyDisabled(item)"
+                    ng-options="oEnumValue.id as oEnumValue.name for oEnumValue in item.enumValues"
+                    ng-required="item.required" ng-model="item.value"></select>
+          </p>
 
-        <p ng-if="item.type == 'enum'">
-          <label>{{item.name}}</label>
-          <select class="form-control" ng-disabled="isFormPropertyDisabled(item)"
-                  ng-options="oEnumValue.id as oEnumValue.name for oEnumValue in item.enumValues"
-                  ng-required="item.required" ng-model="item.value"></select>
-        </p>
-
-        <p ng-if="['string', 'long', 'date', 'enum', 'user', 'textArea'].indexOf(item.type) == -1">
-          <label>{{item.name}}</label>
-          <input class="form-control" ng-disabled="true" ng-required="item.required" ng-model="item.value" />
+          <p ng-if="['string', 'long', 'date', 'enum', 'user', 'textArea'].indexOf(item.type) == -1">
+            <label>{{item.name}}</label>
+            <input class="form-control" ng-disabled="true" ng-required="item.required" ng-model="item.value" />
+          </p>
+        </div>
+        <div ng-show="attachments">
+          <p ng-repeat="item in attachments">
+            Файл: <a href="/api/tasks/{{taskId}}/attachments/{{item.id}}/content" target="_blank"><b>{{item.name}}</b> {{item.description}}</a>
+          </p>
+        </div>
+        <p ng-if="selectedTask"> <!--taskForm != null    -->
+          <button ng-hide="selectedTask.assignee != null" ng-click="assignTask()" class="btn btn-success">Взяти в роботу</button>
+          <!-- <button ng-hide="taskForm == null" ng-disabled="selectedTask.assignee != null && hasAttachment()" ng-click="downloadAttachment()" class="btn btn-success">Загрузити документ</button> -->
+          <button ng-hide="selectedTask.assignee == null" ng-click="submitTask()" class="btn btn-success">Опрацювати</button>
         </p>
       </div>
-      <div ng-show="attachments">
-        <p ng-repeat="item in attachments">
-          Файл: <a href="/api/tasks/{{taskId}}/attachments/{{item.id}}/content" target="_blank"><b>{{item.name}}</b> {{item.description}}</a>
-        </p>
-      </div>
-      <p ng-if="selectedTask"> <!--taskForm != null    -->
-        <button ng-hide="selectedTask.assignee != null" ng-click="assignTask()" class="btn btn-success">Взяти в роботу</button>
-        <!-- <button ng-hide="taskForm == null" ng-disabled="selectedTask.assignee != null && hasAttachment()" ng-click="downloadAttachment()" class="btn btn-success">Загрузити документ</button> -->
-        <button ng-hide="selectedTask.assignee == null" ng-click="submitTask()" class="btn btn-success">Опрацювати</button>
-      </p>
     </div>
   </div>
 </div>
