--- a/dashboard-js/client/app/tasks/tasks.html
+++ b/dashboard-js/client/app/tasks/tasks.html
@@ -22,7 +22,7 @@
 
         <div ng-repeat="item in taskForm">
           <p ng-if="['string', 'long', 'date'].indexOf(item.type) > -1">
-            <label>{{item.name}}</label>
+            <label>{{item.name}} {{item.type}}</label>
             <input class="form-control" ng-disabled="isFormPropertyDisabled(item)"
                    ng-required="item.required" ng-model="item.value"/>
           </p>
@@ -44,9 +44,12 @@
                     ng-options="oEnumValue.id as oEnumValue.name for oEnumValue in item.enumValues"
                     ng-required="item.required" ng-model="item.value"></select>
           </p>
-
-          <p ng-if="['string', 'long', 'date', 'enum', 'user', 'textArea'].indexOf(item.type) == -1">
+          <p ng-if="item.type == 'file'">
             <label>{{item.name}}</label>
+            <a href="/api/tasks/{{taskId}}/attachments/{{item.id}}/content" target="_blank"><b>{{item.name}}</b> {{item.description}}</a>
+          </p>
+          <p ng-if="['string', 'long', 'date', 'enum', 'user', 'textArea', 'file'].indexOf(item.type) == -1">
+            <label>{{item.name}} {{item.type}}</label>
             <input class="form-control" ng-disabled="true" ng-required="item.required" ng-model="item.value" />
           </p>
         </div>
