--- a/dashboard-js/client/app/tasks/tasks.html
+++ b/dashboard-js/client/app/tasks/tasks.html
@@ -46,7 +46,7 @@
           </p>
           <p ng-if="item.type == 'file'">
             <label>{{item.name}}</label>
-            <a href="/api/tasks/{{taskId}}/attachments/{{item.id}}/content" target="_blank"><b>{{item.name}}</b> {{item.description}}</a>
+            <a href="/api/tasks/{{taskId}}/attachments/{{item.id}}/content/{{item.nFileIdx}}" target="_blank"><b>{{item.name}}</b> {{item.description}}</a>
           </p>
           <p ng-if="['string', 'long', 'date', 'enum', 'user', 'textArea', 'file'].indexOf(item.type) == -1">
             <label>{{item.name}} {{item.type}}</label>
@@ -55,7 +55,7 @@
         </div>
         <div ng-show="attachments">
           <p ng-repeat="item in attachments">
-            Файл: <a href="/api/tasks/{{taskId}}/attachments/{{item.id}}/content" target="_blank"><b>{{item.name}}</b> {{item.description}}</a>
+            Файл: <a href="/api/tasks/{{taskId}}/attachments/{{item.id}}/content/{{$index}}" target="_blank"><b>{{item.name}}</b> {{item.description}}</a>
           </p>
         </div>
         <p ng-if="selectedTask"> <!--taskForm != null    -->
