--- a/central-js/client/src/html/catalog/services.html
+++ b/central-js/client/src/html/catalog/services.html
@@ -1,12 +1,12 @@
 <div class="container">
-	<div class="row" ng-repeat="category in catalog.aCategory">
-		<h1>{{category.sName}}</h1>
+	<div class="row" ng-repeat="category in catalog.categories">
+		<h1>{{category.name}}</h1>
 		<div class="row">
-			<div class="col-xs-4" ng-repeat="subcategory in category.aSubcategory">
-				<h3>{{subcategory.sName}}</h3>
+			<div class="col-xs-4" ng-repeat="subcategory in category.subcategories">
+				<h3>{{subcategory.name}}</h3>
 				<ul class="list-unstyled">
-					<li ng-repeat="service in subcategory.aService">
-						<a ui-sref="service.general({'id': service.nID })">{{service.sName}}</a>
+					<li ng-repeat="service in subcategory.services">
+						<a ui-sref="service.general({'id': service.id })">{{service.name}}</a>
 					</li>
 				</ul>
 				<p><a class="btn btn-default" href="#" role="button">Всі послуги <span class="badge badge-info">42</span></a></p>
