--- a/central-js/client/src/html/service/city/built-in/bankid.html
+++ b/central-js/client/src/html/service/city/built-in/bankid.html
@@ -1,14 +1,18 @@
 <div class="list-group">
-	<div class="list-group-item" ng-class="{'disabled': data.region}">
+	<div class="list-group-item" ng-class="{'disabled': data.city}">
 		<div class="row no-margin-bottom">
 			<div class="col-md-11 form-inline">
 				<span>Крок 1. Оберіть свій регіон </span>
 				<div style="display:inline-block">
 					<span>Область</span>
-					<select class="form-control" name="region" ng-model="data.region" ng-options="region as region.name for region in places.regions track by region.id" ng-disabled="data.region"></select>
+					<select class="form-control" name="region" ng-model="data.region" ng-options="region as region.sName for region in places.aRegion track by region.nID" ng-disabled="data.city"></select>
+				</div>
+				<div style="display:inline-block" ng-if="data.region">
+					<span>Місто</span>
+					<select class="form-control" name="city" ng-model="data.city" ng-options="city as city.sName for city in data.region.aCity track by city.nID" ng-disabled="data.city"></select>
 				</div>
 			</div>
-			<div class="col-md-1" ng-if="data.region">
+			<div class="col-md-1" ng-if="data.city">
 				<div class="link-button">
 					<a href="#">Змінити</a>
 				</div>
