--- a/central-js/client/src/html/service/city/link/index.html
+++ b/central-js/client/src/html/service/city/link/index.html
@@ -5,11 +5,11 @@
 				<span>Крок 1. Оберіть свій регіон </span>
 				<div style="display:inline-block">
 					<span>Область</span>
-					<select class="form-control" name="region" ng-model="data.region" ng-options="region as region.name for region in places.regions track by region.id" ng-disabled="data.city"></select>
+					<select class="form-control" name="region" ng-model="data.region" ng-options="region as region.sName for region in places.aRegion track by region.nID" ng-disabled="data.city"></select>
 				</div>
 				<div style="display:inline-block" ng-if="data.region">
 					<span>Місто</span>
-					<select class="form-control" name="city" ng-model="data.city" ng-options="city as city.name for city in data.region.cities track by city.id" ng-disabled="data.city"></select>
+					<select class="form-control" name="city" ng-model="data.city" ng-options="city as city.sName for city in data.region.aCity track by city.nID" ng-disabled="data.city"></select>
 				</div>
 			</div>
 			<div class="col-md-1" ng-if="data.city">
@@ -21,6 +21,6 @@
 	</div>
 	<div class="list-group-item disabled" ng-if="data.city">
 		<span>Крок 2. Перейдіть за посиланням:</span>
-		<a ng-href="{{service.serviceType.url}}">{{service.name}}</a>
+		<a ng-href="http://localhost/">{{service.sName}}</a>
 	</div>
 </div>
