Добавив можливість зміни параметрів.

--- a/central-js/client/src/html/service/country/built-in/bankid.html
+++ b/central-js/client/src/html/service/country/built-in/bankid.html
@@ -4,7 +4,7 @@
 			<div class="col-md-11">Крок 1. Ви увійшли як {{account.customer.firstName}} {{account.customer.middleName}} {{account.customer.lastName}}</div>
 			<div class="col-md-1">
 				<div class="link-button">
-					<a href="#">Змінити</a>
+					<a ng-click="step1()">Змінити</a>
 				</div>
 			</div>
 		</div>
