--- a/central-js/client/src/html/service/region/built-in/index.html
+++ b/central-js/client/src/html/service/region/built-in/index.html
@@ -10,7 +10,7 @@
 			</div>
 			<div class="col-md-1" ng-if="data.region">
 				<div class="link-button">
-					<a href="#">Змінити</a>
+					<a ng-click="step1()">Змінити</a>
 				</div>
 			</div>
 		</div>
