--- a/central-js/client/src/html/service/city/built-in/bankid.html
+++ b/central-js/client/src/html/service/city/built-in/bankid.html
@@ -14,7 +14,7 @@
 			</div>
 			<div class="col-md-1" ng-if="data.city">
 				<div class="link-button">
-					<a href="#">Змінити</a>
+					<a ng-click="step1()">Змінити</a>
 				</div>
 			</div>
 		</div>
@@ -24,7 +24,7 @@
 			<div class="col-md-11">Крок 2. Ви увійшли як {{account.customer.firstName}} {{account.customer.middleName}} {{account.customer.lastName}}</div>
 			<div class="col-md-1">
 				<div class="link-button">
-					<a href="#">Змінити</a>
+					<a ng-click="step2()">Змінити</a>
 				</div>
 			</div>
 		</div>
