Добавив можливість перейти на сторінку інструкції якщо послуга не підтримується.

--- a/central-js/client/src/html/service/region/error.html
+++ b/central-js/client/src/html/service/region/error.html
@@ -22,7 +22,7 @@
 			</div>
 		</div>
 		<div class="row">
-			<div class="col-md-12 text-center">Ознайомитись, як можна скористатися цією послугою, можна в <a href="#">Інструкції</a></div>
+			<div class="col-md-12 text-center">Ознайомитись, як можна скористатися цією послугою, можна в <a ui-sref="service.instruction({ id: service.nID })">Інструкції</a></div>
 		</div>
 	</div>
 </div>
