Display task counters. ( Query for all tasks for now as count api isn't ready )

--- a/dashboard-js/client/app/tasks/tasks.html
+++ b/dashboard-js/client/app/tasks/tasks.html
@@ -1,5 +1,6 @@
 <div ng-include="'components/navbar/navbar.html'" class="navbar-fixed-top"></div>
-<div class="container">
+<div class="container"
+     ng-init="init()">
   <div class="container__in">
     <div class="row">
       <div class="col-xs-5 sidebar">
