--- a/dashboard-js/client/app/tasks/tasks.html
+++ b/dashboard-js/client/app/tasks/tasks.html
@@ -23,7 +23,7 @@
 
         <div ng-repeat="item in taskForm">
           <p ng-if="['string', 'long', 'date'].indexOf(item.type) > -1">
-            <label>{{item.name}} {{item.type}}</label>
+            <label>{{item.name}}</label><!-- {{item.type}}-->
             <input class="form-control" ng-disabled="isFormPropertyDisabled(item)"
                    ng-required="item.required" ng-model="item.value"/>
           </p>
