--- a/central-js/client/src/html/catalog/services.html
+++ b/central-js/client/src/html/catalog/services.html
@@ -2,15 +2,18 @@
 	<div class="row" ng-repeat="category in catalog.aCategory">
 		<h1>{{category.sName}}</h1>
 		<div class="row">
-			<div class="col-xs-4" ng-repeat="subcategory in category.aSubcategory">
+			<div class="col-xs-4" ng-repeat-start="subcategory in category.aSubcategory">
 				<h3>{{subcategory.sName}}</h3>
 				<ul class="list-unstyled">
 					<li ng-repeat="service in subcategory.aService">
 						<a ui-sref="service.general({'id': service.nID })">{{service.sName}}</a>
 					</li>
 				</ul>
+				<!--
 				<p><a class="btn btn-default" href="#" role="button">Всі послуги <span class="badge badge-info">42</span></a></p>
+				-->
 			</div>
+			<div class="col-xs-12" ng-if="($index+1)%3 == 0" ng-repeat-end></div>
 		</div>
 	</div>
 </div>
