--- a/central-js/client/src/html/service/region/link/index.html
+++ b/central-js/client/src/html/service/region/link/index.html
@@ -5,7 +5,7 @@
 				<span>Крок 1. Оберіть свій регіон </span>
 				<div style="display:inline-block">
 					<span>Область</span>
-					<select class="form-control" name="region" ng-model="data.region" ng-options="region as region.name for region in places.regions track by region.id" ng-disabled="data.region"></select>
+					<select class="form-control" name="region" ng-model="data.region" ng-options="region as region.sName for region in places.aRegion track by region.nID" ng-disabled="data.region"></select>
 				</div>
 			</div>
 			<div class="col-md-1" ng-if="data.region">
@@ -17,6 +17,6 @@
 	</div>
 	<div class="list-group-item disabled" ng-if="data.region">
 		<span>Крок 2. Перейдіть за посиланням:</span>
-		<a ng-href="{{service.serviceType.url}}">{{service.name}}</a>
+		<a ng-href="http://localhost/">{{service.sName}}</a>
 	</div>
 </div>
