--- a/dashboard-js/client/app/tasks/tasks.html
+++ b/dashboard-js/client/app/tasks/tasks.html
@@ -1,5 +1,6 @@
 <div ng-include="'components/navbar/navbar.html'" class="navbar-fixed-top"></div>
-<div class="container">
+<div class="container"
+     ng-init="init()">
   <div class="container__in">
     <div class="row">
       <div class="col-xs-5 sidebar">
@@ -22,7 +23,7 @@
 
         <div ng-repeat="item in taskForm">
           <p ng-if="['string', 'long', 'date'].indexOf(item.type) > -1">
-            <label>{{item.name}} {{item.type}}</label>
+            <label>{{item.name}}</label><!-- {{item.type}}-->
             <input class="form-control" ng-disabled="isFormPropertyDisabled(item)"
                    ng-required="item.required" ng-model="item.value"/>
           </p>
@@ -45,11 +46,11 @@
                     ng-required="item.required" ng-model="item.value"></select>
           </p>
           <p ng-if="item.type == 'file'">
-            <label>{{item.name}}</label>
-            <a href="/api/tasks/{{taskId}}/attachments/{{item.id}}/content/{{item.nFileIdx}}" target="_blank"><b>{{item.name}}</b> {{item.description}}</a>
+            <!--label>{{item.name}}</label--> 
+            <a href="/api/tasks/{{taskId}}/attachments/{{item.id}}/content/{{item.nFileIdx}}" target="_blank"><!-- <b>{{item.name}}</b> {{item.description}} --></a>
           </p>
           <p ng-if="['string', 'long', 'date', 'enum', 'user', 'textArea', 'file'].indexOf(item.type) == -1">
-            <label>{{item.name}} {{item.type}}</label>
+            <label>{{item.name}}</label> <!-- {{item.type}} -->
             <input class="form-control" ng-disabled="true" ng-required="item.required" ng-model="item.value" />
           </p>
         </div>
