Testing CI - commit with broken test.

--- a/dashboard-js/client/app/main/main.html
+++ b/dashboard-js/client/app/main/main.html
@@ -2,7 +2,7 @@
 
 <header class="hero-unit" id="banner">
   <div class="container">
-    <h1>Електронний портал</h1>
+    <h1>Електронний портал Cломан</h1>
   </div>
 </header>
 
