--- a/central-js/client/src/html/catalog/services.html
+++ b/central-js/client/src/html/catalog/services.html
@@ -1,8 +1,17 @@
 <div class="container">
+    <div class="row">
+        <div class="col-md-6 col-md-offset-3">
+           <div class="big-inner-addon">
+              <span class="glyphicon glyphicon-search al-left" aria-hidden="true"></span>
+              <input type="text" class="form-control input-lg" placeholder="Пошук послуги">
+              <a href="#"><span class="glyphicon glyphicon-triangle-bottom al-right" aria-hidden="true"></span></a>
+           </div>
+        </div>
+    </div>
 	<div class="row" ng-repeat="category in catalog.aCategory">
 		<h1>{{category.sName}}</h1>
-		<div class="row">
-			<div class="col-xs-4" ng-repeat-start="subcategory in category.aSubcategory">
+		
+			<div class="col-md-4" ng-repeat-start="subcategory in category.aSubcategory">
 				<h3>{{subcategory.sName}}</h3>
 				<ul class="list-unstyled">
 					<li ng-repeat="service in subcategory.aService">
@@ -13,7 +22,7 @@
 				<p><a class="btn btn-default" href="#" role="button">Всі послуги <span class="badge badge-info">42</span></a></p>
 				-->
 			</div>
-			<div class="col-xs-12" ng-if="($index+1)%3 == 0" ng-repeat-end></div>
-		</div>
+			<div class="col-md-12" ng-if="($index+1)%3 == 0" ng-repeat-end></div>
+		
 	</div>
 </div>
