--- a/central-js/client/src/html/documents/index.html
+++ b/central-js/client/src/html/documents/index.html
@@ -2,8 +2,7 @@
 			<div class="row">
 				<div class="col-md-12">
 					<p align="justify">Тут знаходяться всі Ваші документи, які були раніше завантажені авторизованими організаціями. Ви можете їх скачати або надати доступ третім особам (в тому числі іншим державним або приватним
-						організаціям). Згідно <a href="#">закону №9157-VII від 01.10.2015</a> надання доступу до електронного образу документу на порталі i.gov.ua
-						рівносильне наданню документу в паперовому оригіналі
+						організаціям).
 					</p>
 				</div>
 			</div>
