--- a/central-js/client/src/index.html
+++ b/central-js/client/src/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<title>Портал державних послуг</title>
 	<base href="/">
-	<link href='http://fonts.googleapis.com/css?family=PT+Sans:400,700,400italic,700italic&subset=cyrillic,cyrillic-ext,latin' rel='stylesheet' type='text/css'>
+	<link href='//fonts.googleapis.com/css?family=PT+Sans:400,700,400italic,700italic&subset=cyrillic,cyrillic-ext,latin' rel='stylesheet' type='text/css'>
     <!-- build:style bundle -->
 	<!-- /build -->
 </head>
