--- a/central-js/client/src/html/service/city/built-in/bankid.html
+++ b/central-js/client/src/html/service/city/built-in/bankid.html
@@ -21,7 +21,7 @@
 	</div>
 	<div class="list-group-item disabled">
 		<div class="row no-margin-bottom">
-			<div class="col-md-11">Крок 2. Ви увійшли як {{account.customer.firstName}} {{account.customer.middleName}} {{account.customer.lastName}}</div>
+			<div class="col-md-11">Крок 2. Ви увійшли як {{data.formData.params.bankIdfirstName.value}} {{data.formData.params.bankIdmiddleName.value}} {{data.formData.params.bankIdlastName.value}}</div>
 			<div class="col-md-1">
 				<div class="link-button">
 					<a ng-click="step2()">Змінити</a>
