--- a/central-js/client/src/html/documents/index.html
+++ b/central-js/client/src/html/documents/index.html
@@ -1,6 +1,8 @@
 <div class="container">
     <div class="row">
         <div class="col-md-12">
+            <div ui-view="bankid"></div>
+            <div ui-view="content"></div>
             <p align="justify">Тут знаходяться всі Ваші документи, які були раніше завантажені авторизованими організаціями. Ви можете їх скачати або надати доступ третім особам (в тому числі іншим державним або приватним
                 організаціям).
             </p>
