--- a/central-js/client/src/html/catalog/services.html
+++ b/central-js/client/src/html/catalog/services.html
@@ -8,7 +8,7 @@
            </div>
         </div>
     </div>
-	<div class="row" ng-repeat="category in catalog.aCategory">
+	<div class="row" ng-repeat="category in catalog">
 		<h1>{{category.sName}}</h1>
 		
 			<div class="col-md-4" ng-repeat-start="subcategory in category.aSubcategory">
